--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,12 @@ footer {
   padding: 10px; /* Add padding as needed */
 }
 
+.home,
+.about,
+.projectListpage {
+  padding: 5px;
+}
+
 .article-list-item {
   text-decoration: none;
   color: black;
