--- a/src/App.css
+++ b/src/App.css
@@ -62,6 +62,7 @@ nav a:hover {
   max-width: 700px;
   margin: auto;
   padding-top: 72px;
+  padding-bottom: 72px;
 }
 
 footer {
@@ -71,7 +72,7 @@ footer {
   width: 100%;
   background: rgb(248, 222, 187);
   display: flex;
-  padding-top: 20px;
+
   justify-content: space-between;
 }
 
@@ -156,4 +157,5 @@ p {
 }
 .email {
   font-weight: bolder;
+  padding-right: 5px;
 }
