--- a/src/App.css
+++ b/src/App.css
@@ -29,9 +29,14 @@ button:hover {
   transform: scale(1.3);
 }
 
-h3,
+h3 {
+  margin-bottom: 0;
+  color: hsl(0, 0%, 10%);
+}
+
 h4 {
   margin-bottom: 0;
+  color: hsl(240, 100%, 50%);
 }
 
 nav {
@@ -40,7 +45,7 @@ nav {
   position: fixed;
   top: 0;
   width: 100%;
-  background: rgb(248, 222, 187);
+  background: hsl(34, 81%, 85%);
 }
 
 nav ul {
@@ -57,13 +62,13 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: rgb(123, 57, 57);
+  color: hsl(0, 37%, 35%);
   font-weight: bold;
   padding: 24px 32px;
 }
 
 nav a:hover {
-  background: rgb(78, 61, 61);
+  background: hsl(0, 12%, 27%);
   color: white;
 }
 
@@ -79,7 +84,7 @@ footer {
   position: fixed;
   bottom: 0;
   width: 100%;
-  background: rgb(248, 222, 187);
+  background: hsl(34, 81%, 85%);
   display: flex;
 
   justify-content: space-between;
@@ -171,4 +176,10 @@ p {
 .email {
   font-weight: bolder;
   padding-right: 5px;
+}
+
+.welcomeNote,
+.aboutMe,
+.aboutList {
+  color: hsl(0, 0%, 17%);
 }
