--- a/src/App.css
+++ b/src/App.css
@@ -196,3 +196,18 @@ p {
 .paragraph {
   color: hsl(0, 0%, 17%);
 }
+
+.certification-link {
+  color: blue; /* Change this to the color you want for unvisited links */
+  text-decoration: none; /* Removes underline */
+}
+
+/* Styles for visited links */
+.certification-link:visited {
+  color: blue; /* Change this to the color you want for visited links */
+}
+
+/* Styles for active links (while being clicked) */
+.certification-link:active {
+  color: blue; /* Change this to the color you want for active links */
+}
